# OPC_Knowledge_MCP

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  QUICKSTART.md  README.md  SESSION_SUMMARY.md  STATUS.md  config.example.toml
.claude/: settings.local.json
docs/: API.md  CLAUDE.md  DESIGN.md  README.md  STATUS.md  TESTING.md  monitoring.md
docs/decisions/: no-file-upload-batch.md  no-streaming-query.md
scripts/: test_all.sh  test_errors.sh  test_functions.sh  test_hot_reload.sh  test_mcp.sh  test_permissions.sh
src/: README.md  config.rs  error.rs  lib.rs  main.rs  metrics.rs  stats.rs
src/api/: audit.rs  config.rs  health.rs  mod.rs  stats.rs  tokens.rs
src/auth/: README.md  audit.rs  mod.rs  token.rs
src/http/: README.md  middleware.rs  mod.rs  static_files.rs
src/http/static/: app.js  index.html  login.html  style.css  style.legacy.css
src/mcp/: README.md  mod.rs  server.rs  tools.rs
src/rag/: README.md  client.rs  mod.rs  types.rs
tasks/: README.md  phase4-plan.md  task2-1-rmcp-integration.md  task2-2-config-improvements.md  task2-3-e2e-testing.md  task3-1-unit-tests.md  task3-2-integration-tests.md  task3-3-e2e-reposition.md  task4-0-phase4-overview.md  task4-1-3-alpinejs-refactor.md  task4-1-admin-ui.md  task4-1-cors.md  task4-2-hot-reload.md  task4-3-metrics.md  task5-1-ui-improvement.md
tasks/phase2/: README.md
tests/: integration_test.rs
