[package]
name = "pangenmcp"
version = "0.1.0"
edition = "2021"

[dependencies]
# MCP 框架（Streamable HTTP 传输）
rmcp = { version = "1", features = ["server", "macros", "transport-streamable-http-server"] }
schemars = "1"

# HTTP 服务器
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }
http = "1"

# HTTP 客户端（用于 LightRAG 通信）
reqwest = { version = "0.12", features = ["json"] }

# 异步运行时
tokio = { version = "1", features = ["full"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 配置管理
config = "0.14"
toml = "0.8"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 静态文件嵌入
rust-embed = "8"
mime_guess = "2"

# 随机数生成（用于 token 创建）
rand = "0.8"

# 编码
hex = "0.4"

[dev-dependencies]
# 测试工具
tokio-test = "0.4"
tempfile = "3"
mockito = "1"
tower = { version = "0.5", features = ["util"] }
